fix: mobile flickering on scrolling

--- a/app/css/tags.module.css
+++ b/app/css/tags.module.css
@@ -24,6 +24,7 @@
   background: #101010;
   border: 2px solid #fff;
   transform-origin: bottom;
+  will-change: transform;
 
   &:nth-child(n + 1) {
     position: absolute;
